--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,14 +71,14 @@ workflows:
   udagram:
     jobs:
       - build
-      - hold:
-          filters:
-            branches:
-              only:
-                - feature/update-source
-          type: approval
-          requires:
-            - build
+      # - hold:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - feature/update-source
+      #     type: approval
+      #     requires:
+      #       - build
       - deploy:
           requires:
-            - hold
+            - build
